--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,23 @@
 <html>
   <head>
     <title>HotelSim</title>
+    <%= favicon_link_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+
   </head>
 
   <body>
+  <div class="ui small menu">
+    <div class="ui container">
+      <%= render 'layouts/navigation' %>
+    </div>
+  </div>
+  <div class="ui container">
     <%= yield %>
+  </div>
   </body>
 </html>
