Validacoes das models: Reserva, Cliente e Quarto. Correcoes das views de reservas e quartos.

--- a/app/views/quartos/_quarto.html.erb
+++ b/app/views/quartos/_quarto.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Disponibilidade:</strong>
-    <%= quarto.disponibilidade %>
+    <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %>
   </p>
 
   <p>
