--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :cliente_id, style: "display: block" %>
-    <%= form.text_field :cliente_id %>
+    <%= form.label :cliente_id %>
+    <%= form.collection_select(:cliente_id, Cliente.all, :id, :nome,{:selected => @reserva.cliente_id})%>
   </div>
 
   <div>
-    <%= form.label :quarto_id, style: "display: block" %>
-    <%= form.text_field :quarto_id %>
+    <%= form.label :quarto_id %>
+    <%= form.collection_select(:quarto_id, Quarto.disponibilidade, :id, :numero, selected: @reserva.quarto_id) %>
   </div>
 
   <div>
