Links das views atualizados

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @cliente %>
 
 <div>
-  <%= link_to "Edit this cliente", edit_cliente_path(@cliente) %> |
-  <%= link_to "Back to clientes", clientes_path %>
-
-  <%= button_to "Destroy this cliente", @cliente, method: :delete %>
+  <%= link_to "Editar cliente", edit_cliente_path(@cliente) %> |
+  <%= link_to "Clientes", clientes_path %>
+  <%= button_to "Remover cliente", @cliente, method: :delete %>
 </div>
+
+</br>
+<%= link_to "Home", root_path %>
