--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -15,6 +15,6 @@
 </br>
 </br>
 </br>
-<button class="ui blue submit button"><%=link_to "Cadastrar", new_cliente_path, style: "color: black;" %></button>
-
+<button class="ui blue submit button"><%=link_to "Clientes", clientes_path, style: "color: black;" %></button> </br> </br>
+<button class="ui blue submit button"><%=link_to "Reservas", reservas_path, style: "color: black;" %></button> </br> </br>
 </body>
