--- a/app/views/reservas/new.html.erb
+++ b/app/views/reservas/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New reserva</h1>
+<h1>Agendar reserva</h1>
 
 <%= render "form", reserva: @reserva %>
 
 <br>
 
 <div>
-  <%= link_to "Back to reservas", reservas_path %>
+  <%= link_to "Reservas", reservas_path %> | <%= link_to "Home", root_path %>
 </div>
+
