--- a/app/views/reservas/show.html.erb
+++ b/app/views/reservas/show.html.erb
@@ -3,8 +3,11 @@
 <%= render @reserva %>
 
 <div>
-  <%= link_to "Edit this reserva", edit_reserva_path(@reserva) %> |
-  <%= link_to "Back to reservas", reservas_path %>
+  <%= link_to "Editar reserva", edit_reserva_path(@reserva) %> |
+  <%= link_to "Reservas", reservas_path %>
 
-  <%= button_to "Destroy this reserva", @reserva, method: :delete %>
+  <%= button_to "Remover reserva", @reserva, method: :delete %>
 </div>
+
+<br>
+<%= link_to "Home", root_path %>
