--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New cliente</h1>
+<h1>Cadastrar cliente</h1>
 
 <%= render "form", cliente: @cliente %>
 
 <br>
 
 <div>
-  <%= link_to "Back to clientes", clientes_path %>
+  </br>
+  <%= link_to "Clientes", clientes_path %> |
+  <%= link_to "Home", root_path %>
 </div>
