--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,12 @@
 <div class="item">
-  <%= link_to "Home",root_path, style: "color: black;" %>
+  <%= link_to "Home", root_path, style: "color: black;" %>
 </div>
-<a class="item">
-</a>
+<div class="item">
+  <%= link_to "Quartos", quartos_path, style: "color: black;" %>
+</div>
 <div class="right menu">
 </div>
-<!---
+
 <div class="item">
-  <button class="ui blue submit button"><%=link_to "login", root_path, style: "color: black;" %></button>
+  <button class="ui blue submit button"><%=link_to "Cadastrar", new_cliente_path, style: "color: black;" %></button>
 </div>
----->
