--- a/app/views/quartos/edit.html.erb
+++ b/app/views/quartos/edit.html.erb
@@ -5,6 +5,9 @@
 <br>
 
 <div>
-  <%= link_to "Show this quarto", @quarto %> |
-  <%= link_to "Back to quartos", quartos_path %>
+  <%= link_to "Exibir quarto", @quarto %> |
+  <%= link_to "Quartos", quartos_path %>
 </div>
+
+<br>
+<%= link_to "Home", root_path %>
