--- a/app/views/quartos/new.html.erb
+++ b/app/views/quartos/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New quarto</h1>
+<h1>Cadastrar quarto</h1>
 
 <%= render "form", quarto: @quarto %>
 
 <br>
 
 <div>
-  <%= link_to "Back to quartos", quartos_path %>
+  <%= link_to "Quartos", quartos_path %> | <%= link_to "Home", root_path %>
 </div>
+
