--- a/app/views/reservas/edit.html.erb
+++ b/app/views/reservas/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing reserva</h1>
+<h1>Editar reserva</h1>
 
 <%= render "form", reserva: @reserva %>
 
 <br>
 
 <div>
-  <%= link_to "Show this reserva", @reserva %> |
-  <%= link_to "Back to reservas", reservas_path %>
+  <%= link_to "Exibir reserva", @reserva %> |
+  <%= link_to "Reservas", reservas_path %>
 </div>
+
+<br>
+
+<%= link_to "Home", root_path %>
