Alteracoes no controller de reserva para salvar custo, alteracao de tipo de data_de_entrada e data_de_saida para datetime e modificacoes nas views de reserva.

--- a/app/views/reservas/_reserva.html.erb
+++ b/app/views/reservas/_reserva.html.erb
@@ -11,17 +11,16 @@
 
   <p>
     <strong>Data de entrada:</strong>
-    <%= reserva.data_de_entrada %>
+    <%= reserva.data_de_entrada.to_time.strftime("%d/%m/%Y %H:%M") %>
   </p>
 
   <p>
-    <strong>Data de saida:</strong>
-    <%= reserva.data_de_saida %>
+    <strong>Data de saída:</strong>
+    <%= reserva.data_de_saida.to_time.strftime("%d/%m/%Y %H:%M") %>
   </p>
 
   <p>
     <strong>Custo:</strong>
     <%= reserva.custo %>
   </p>
-
 </div>
