--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -5,5 +5,7 @@
 <br>
 
 <div>
-  <%= link_to "Back to clientes", clientes_path %>
+  </br>
+  <%= link_to "Clientes", clientes_path %> |
+  <%= link_to "Home", root_path %>
 </div>
