--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,8 @@
 </main>
 
 <button class="button"><%=link_to "Clientes", clientes_path, style: "color: black;" %></button> </br> </br>
+<button class="button"><%=link_to "Quartos", quartos_path, style: "color: black;" %></button> </br> </br>
 <button class="button"><%=link_to "Reservas", reservas_path, style: "color: black;" %></button> </br> </br>
+
 </body>
 </html>
