--- a/app/views/quartos/new.html.erb
+++ b/app/views/quartos/new.html.erb
@@ -5,5 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Back to quartos", quartos_path %>
+  <%= link_to "Quartos", quartos_path %> | <%= link_to "Home", root_path %>
 </div>
+
