--- a/app/views/reservas/index.html.erb
+++ b/app/views/reservas/index.html.erb
@@ -2,13 +2,19 @@
 
 <h1>Reservas</h1>
 
-<div id="reservas">
+<br>
+
+<tr>
   <% @reservas.each do |reserva| %>
-    <%= render reserva %>
     <p>
-      <%= link_to "Show this reserva", reserva %>
+      [ <%= reserva.data_de_entrada.strftime("%d/%m/%Y %H:%M") %> - <%= reserva.data_de_saida.strftime("%d/%m/%Y %H:%M") %> ] -
+      <%= link_to "Exibir Reserva", reserva, id:"d-#{reserva.data_de_entrada}" %>
     </p>
   <% end %>
-</div>
+</tr>
 
-<%= link_to "New reserva", new_reserva_path %>
+
+<%= link_to "Agendar reserva", new_reserva_path %>
+
+<br>
+<%= link_to "Home", root_path %>
