--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div>
+    <%= form.label :custo, style: "display: block" %>
+    <%= form.text_field :custo, readonly: true, id: 'custo-field' %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
