--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing cliente</h1>
+<h1 id='up-h1'>Editing cliente</h1>
 
 <%= render "form", cliente: @cliente %>
 
 <br>
 
-<div>
+<div class='link-to-div'>
   <%= link_to "Exibir cliente", @cliente %> |
   <%= link_to "Clientes", clientes_path %>
 </div>
