--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,11 +1,10 @@
-<h1>New cliente</h1>
+<h1 id='up-h1'>New cliente</h1>
 
 <%= render "form", cliente: @cliente %>
 
 <br>
 
-<div>
-  </br>
-  <%= link_to "Clientes", clientes_path %> |
+<div class='link-to-div'>
+  <%= link_to "Clientes", clientes_path %>
   <%= link_to "Home", root_path %>
 </div>
