--- a/app/views/quartos/new.html.erb
+++ b/app/views/quartos/new.html.erb
@@ -1,10 +1,11 @@
-<h1>New quarto</h1>
+<h1 id='up-h1'>New quarto</h1>
 
 <%= render "form", quarto: @quarto %>
 
 <br>
 
-<div>
-  <%= link_to "Quartos", quartos_path %> | <%= link_to "Home", root_path %>
+<div class='link-to-div'>
+  <%= link_to "Quartos", quartos_path %>
+  <%= link_to "Home", root_path %>
 </div>
 
