--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,7 +8,7 @@
     padding: 0;
 }
 
-html, body{
+html, body, main{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,3 +113,45 @@ input[type="checkbox"]:checked {
     background-color: rgba(30, 218, 155, 0.575);
 }
 /* End of New and Edit pages */
+
+/* Home page */
+
+#app-name{
+    font-size: 4rem;
+    margin-top: -30%;
+}
+
+#descricao{
+    margin: 5% 0;
+}
+
+#body-home{
+    background-color: beige;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+}
+
+#home-buttons{
+    display: flex;
+
+}
+
+.home-btn{
+    border: none;
+    background-color: rgb(14, 138, 41);
+    border-radius: 10px;
+    padding: 15px;
+    margin: 5px;
+}
+
+.home-btn a{
+    text-decoration: none;
+}
+
+.home-btn:hover{
+    background-color: rgb(24, 160, 53);
+    cursor: pointer;
+}
+
+/* End of Home Page */
