--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,12 @@ html, body, main{
     align-items: center;
     user-select: none;
     flex-direction: column;
+    background-color: beige;
+}
+
+#up-h1{
+    margin-top: 20px;
+    font-size: 2.5rem;
 }
 
 /* New and Edit pages */
@@ -54,8 +60,6 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked {
     background-color: rgb(1, 116, 30);
 }
-
-
 
 .submit{
     display: flex;
@@ -103,11 +107,6 @@ input[type="checkbox"]:checked {
     background-color: rgb(1, 61, 66);
 }
 
-#up-h1{
-    margin-top: 20px;
-    font-size: 1.8rem;
-}
-
 .labels select:hover, .labels input[type="text"]:hover, .labels textarea:hover{
     font-weight: bold;
     background-color: rgba(30, 218, 155, 0.575);
@@ -126,7 +125,6 @@ input[type="checkbox"]:checked {
 }
 
 #body-home{
-    background-color: beige;
     display: flex;
     height: 100vh;
     width: 100vw;
@@ -177,3 +175,54 @@ input[type="checkbox"]:checked {
 }
 
 /* End of error messages */
+
+/* Index pages */
+
+
+.list{
+    width: 80vw;
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+}
+
+.show-grid {
+    background-color: rgb(1, 73, 95);
+    color: white;
+    margin: 1px;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.show-grid a{
+    color: rgb(105, 191, 231);
+    text-decoration: none;
+}
+
+.links{
+    margin-top: 5%;
+    display: flex;
+    gap: 3px;
+    position: fixed;
+    bottom: 10%;
+}
+
+.links a{
+    margin: 5px;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(0, 104, 122);
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 160px;
+}
+
+.links a:hover{
+    background-color: rgb(0, 174, 218);
+    cursor: pointer;
+}
+
+/* End of Index pages */
