--- a/app/views/reservas/show.html.erb
+++ b/app/views/reservas/show.html.erb
@@ -2,9 +2,13 @@
 
 <%= render @reserva %>
 
-<div>
-  <%= link_to "Edit this reserva", edit_reserva_path(@reserva) %> |
-  <%= link_to "Back to reservas", reservas_path %>
-
-  <%= button_to "Destroy this reserva", @reserva, method: :delete %>
+<div class='link-show'>
+  <%= link_to "Editar reserva", edit_reserva_path(@reserva) %>
+  <%= link_to "Voltar para reservas", reservas_path %>
+  <%= button_to "Remover reserva", @reserva, method: :delete %>
 </div>
+
+<div id='links'>
+  <%= link_to "Home", root_path %>
+</div>
+
