--- a/app/views/reservas/_reserva.html.erb
+++ b/app/views/reservas/_reserva.html.erb
@@ -1,25 +1,25 @@
-<div id="<%= dom_id reserva %>">
-  <p>
+<div id="<%= dom_id reserva %>" class='showing'>
+  <p class='show-item'>
     <strong>Cliente:</strong>
     <%= Cliente.find(reserva.cliente_id).nome %>
   </p>
 
-  <p>
+  <p class='show-item'>
     <strong>Quarto:</strong>
     <%= Quarto.find(reserva.quarto_id).numero%>
   </p>
 
-  <p>
+  <p class='show-item'>
     <strong>Data de entrada:</strong>
     <%= reserva.data_de_entrada.to_time.strftime("%d/%m/%Y %H:%M") %>
   </p>
 
-  <p>
+  <p class='show-item'>
     <strong>Data de saída:</strong>
     <%= reserva.data_de_saida.to_time.strftime("%d/%m/%Y %H:%M") %>
   </p>
 
-  <p>
+  <p class='show-item'>
     <strong>Custo:</strong>
     <%= reserva.custo %>
   </p>
