CSS: pequenos ajustes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -132,7 +132,6 @@ input[type="checkbox"]:checked {
 
 #home-buttons{
     display: flex;
-
 }
 
 .home-btn{
@@ -140,7 +139,7 @@ input[type="checkbox"]:checked {
     background-color: rgb(14, 138, 41);
     border-radius: 10px;
     padding: 15px;
-    margin: 5px;
+    margin: 5px; width: 200px;
 }
 
 .home-btn a{
@@ -217,7 +216,7 @@ input[type="checkbox"]:checked {
     color: white;
     border-radius: 10px;
     text-align: center;
-    width: 160px;
+    width: 200px;
 }
 
 .links a:hover{
