--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,7 +163,7 @@ input[type="checkbox"]:checked {
     display: none;
     position: absolute;
     list-style: none;
-    background-color: #f9f9f9;
+    background-color: beige;
     width: 50%;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
