--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -2,7 +2,7 @@
   <div class='errors'>
     <% if reserva.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(reserva.errors.count, "error") %> prohibited this reserva from being saved:</h2>
+        <h2><%= pluralize(reserva.errors.count, "error") %> prohibited this reserva from being saved (hover to see)</h2>
 
         <ul>
           <% reserva.errors.each do |error| %>
