resolvendo merge conflicts

--- a/app/views/quartos/_form.html.erb
+++ b/app/views/quartos/_form.html.erb
@@ -21,12 +21,12 @@
 
     <div class='labels'>
       <%= form.label :tipo, style: "display: block" %>
-      <%= form.text_field :tipo %>
+      <%= form.select :tipo, options_for_select(["Quarto Padrão", "Quarto Familiar", "Quarto de Luxo", "Suíte Padrão", "Suíte Presidencial"]) %>
     </div>
 
     <div class='labels'>
       <%= form.label :disponibilidade, style: "display: block" %>
-      <%= form.check_box :disponibilidade %>
+      <%= form.select :disponibilidade, options_for_select([["Disponível", true], ["Indisponível", false]]) %>
     </div>
 
     <div class='labels'>
