--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div class='link-to-div'>
-  <%= link_to "Exibir cliente", @cliente %> |
+  <%= link_to "Exibir cliente", @cliente %>
   <%= link_to "Clientes", clientes_path %>
 </div>
