--- a/app/views/reservas/edit.html.erb
+++ b/app/views/reservas/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div class='link-to-div'>
-  <%= link_to "Show this reserva", @reserva %> |
+  <%= link_to "Show this reserva", @reserva %>
   <%= link_to "Back to reservas", reservas_path %>
 </div>
