--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -283,3 +283,25 @@ input[type="checkbox"]:checked {
 }
 
 /* End of Show pages */
+
+/* Index buttons */
+
+
+.index-btn{
+    margin-top: 20px;
+}
+
+.index-btn a{
+    text-decoration: none;
+    background-color: rgb(3, 110, 3);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.index-btn a:hover{
+    background-color: rgb(0 174 0);
+    cursor: pointer;
+}
+
+/* End of Index buttons */
