--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -289,6 +289,9 @@ input[type="checkbox"]:checked {
 
 .index-btn{
     margin-top: 20px;
+    display: flex;
+    width: 700px;
+    gap: 6px;
 }
 
 .index-btn a{
@@ -297,10 +300,39 @@ input[type="checkbox"]:checked {
     color: white;
     padding: 10px;
     border-radius: 10px;
+    flex-grow: 1;
+    text-align: center;
 }
 
 .index-btn a:hover{
     background-color: rgb(0 174 0);
+    cursor: pointer;
+}
+
+#search-price{
+    margin-top: 25px;
+    position: absolute;
+    right: 10%;
+}
+
+#search-price input[type='number']{
+    background-color: rgba(4, 175, 75, 0.575);
+    padding: 5px;
+}
+
+#search-price input[type='number']::placeholder{
+    color: black;
+    font-weight: bold;
+}
+
+#search-price input[type='submit']{
+    background-color: rgb(1, 161, 161);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#search-price input[type='submit']:hover{
+    background-color: rgb(0 212 212);
     cursor: pointer;
 }
 
