--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -5,8 +5,16 @@
 <div class='index-btn'>
   <%= link_to 'Exibir quartos disponíveis', quartos_path(disponibilidade: true) %>
   <%= link_to 'Exibir quartos indisponíveis', quartos_path(disponibilidade: false) %>
+  <%= link_to 'Exibir todos os quartos', quartos_path %>
 </div>
 
+  <div id='search-price'>
+    <%= form_with(url: quartos_path, method: 'get', local: true) do %>
+      <%= hidden_field_tag(:disponibilidade, params[:disponibilidade]) %>
+      <%= number_field_tag(:max_price, params[:max_price], placeholder: 'Preço Máximo') %>
+      <%= submit_tag("Procurar por preço") %>
+    <% end %>
+  </div>
 
 <div id="quartos" class='list'>
   <tr class='tr-show'>
