--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -313,6 +313,7 @@ input[type="checkbox"]:checked {
     margin-top: 10px;
     position: absolute;
     right: 10%;
+    top: 20%;
 }
 
 #search-price input[type='number']{
