Atualizando "_reserva.html.erb" para formatação e tradução de texto.

--- a/app/views/reservas/_reserva.html.erb
+++ b/app/views/reservas/_reserva.html.erb
@@ -1,22 +1,22 @@
 <div id="<%= dom_id reserva %>" class='showing'>
   <p class='show-item'>
-    <strong>Cliente:</strong>
+    <strong>Nome do Cliente:</strong>
     <%= Cliente.find(reserva.cliente_id).nome %>
   </p>
 
   <p class='show-item'>
-    <strong>Quarto:</strong>
+    <strong>Número do Quarto:</strong>
     <%= Quarto.find(reserva.quarto_id).numero%>
   </p>
 
   <p class='show-item'>
-    <strong>Data de entrada:</strong>
-    <%= reserva.data_de_entrada.to_time.strftime("%d/%m/%Y %H:%M") %>
+    <strong>Data de Entrada:</strong>
+    <%= reserva.data_de_entrada.to_time.strftime("%d/%m/%Y às %H:%M") %>
   </p>
 
   <p class='show-item'>
-    <strong>Data de saída:</strong>
-    <%= reserva.data_de_saida.to_time.strftime("%d/%m/%Y %H:%M") %>
+    <strong>Data de Saída:</strong>
+    <%= reserva.data_de_saida.to_time.strftime("%d/%m/%Y às %H:%M") %>
   </p>
 
   <p class='show-item'>
